--- a/Scripts/Limpieza_Meteorologia.ipynb
+++ b/Scripts/Limpieza_Meteorologia.ipynb
@@ -5029,7 +5029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "bd4294a4",
    "metadata": {},
    "outputs": [
@@ -5045,8 +5045,7 @@
     }
    ],
    "source": [
-    "msno.matrix(meteorologia)\n",
-    "plt.savefig('/home/eneko/Imágenes/missing1.png')"
+    "msno.matrix(meteorologia)"
    ]
   },
   {
@@ -8725,7 +8724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "2ec97b4f",
    "metadata": {},
    "outputs": [
@@ -8741,8 +8740,7 @@
     }
    ],
    "source": [
-    "msno.matrix(meteorologia)\n",
-    "plt.savefig('/home/eneko/Imágenes/missing2.png')"
+    "msno.matrix(meteorologia)"
    ]
   },
   {
