Ordenar todos los archivos de todas las ramas, cambiar rutas  y probar scripts

--- a/Scripts/Script_Analisis_Exploratorio/Boxplot_ratio_cancelaciones_segun_nivel_de_valor_de_reserva.ipynb
+++ b/Scripts/Script_Analisis_Exploratorio/Boxplot_ratio_cancelaciones_segun_nivel_de_valor_de_reserva.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e8e48670",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "bd9aff75",
    "metadata": {},
    "outputs": [
@@ -248,7 +248,7 @@
          "type": "string"
         }
        ],
-       "ref": "855e4194-d2f1-4a7c-b65d-7c7c5bd8b0d1",
+       "ref": "0d61b8ab-e878-4bdb-921a-8c503a4a4952",
        "rows": [
         [
          "0",
@@ -2987,20 +2987,20 @@
        "[52099 rows x 44 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df= pd.read_csv(r\"C:\\Users\\inigo\\Downloads\\reservas.csv\")\n",
+    "df = pd.read_csv(\"../../Datos/DatosTransformados/reservas.csv\")\n",
     "df.columns\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "09cd3644",
    "metadata": {},
    "outputs": [
@@ -3008,14 +3008,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\inigo\\AppData\\Local\\Temp\\ipykernel_21580\\513567344.py:40: FutureWarning: \n",
+      "C:\\Users\\togui\\AppData\\Local\\Temp\\ipykernel_3736\\2812947244.py:30: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
       "  sns.boxplot(\n",
-      "C:\\Users\\inigo\\AppData\\Local\\Temp\\ipykernel_21580\\513567344.py:51: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "C:\\Users\\togui\\AppData\\Local\\Temp\\ipykernel_3736\\2812947244.py:40: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  promedios = df.groupby('nivel_valor')['ratio_cancelaciones_mes_respecto_reservas'].mean()\n",
-      "C:\\Users\\inigo\\AppData\\Local\\Temp\\ipykernel_21580\\513567344.py:52: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "C:\\Users\\togui\\AppData\\Local\\Temp\\ipykernel_3736\\2812947244.py:41: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  cuartiles = df.groupby('nivel_valor')['ratio_cancelaciones_mes_respecto_reservas'].quantile(0.75)\n"
      ]
     },
@@ -3092,36 +3092,6 @@
     "sns.despine()\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5b7aae9c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 1000x600 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "sns.despine()\n",
-    "plt.tight_layout()\n",
-    "fig.savefig(\n",
-    "    \"ratio_cancelaciones_boxplot.png\",\n",
-    "    dpi=300,\n",
-    "    bbox_inches=\"tight\"\n",
-    ")\n",
-    "\n",
-    "plt.show()\n",
-    "\n",
-    "\n"
    ]
   }
  ],
