Creacion del readme y modificaciones poco relevantes en algunos archivos

--- a/Scripts/Scripts_BigDatayEcosistemaDigitalI/1.API_Reto6.ipynb
+++ b/Scripts/Scripts_BigDatayEcosistemaDigitalI/1.API_Reto6.ipynb
@@ -28,12 +28,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "b18dea48",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Revisar los valores únicos de la columna 'asset'\n",
+    "#Revisar los valores Unicos de la columna 'asset'\n",
     "df['asset'].unique()\n",
     "\n",
     "#Crear el diccionario de mapeo de ciudades\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "ab4ab3ff",
    "metadata": {},
    "outputs": [
@@ -107,9 +107,7 @@
     "df['checkout_time'] = pd.to_datetime(df['checkout_time'])\n",
     "\n",
     "print(df['checkin_time'].min())\n",
-    "\n",
-    "print(df['checkout_time'].max())\n",
-    "\n"
+    "print(df['checkout_time'].max())"
    ]
   },
   {
@@ -181,7 +179,7 @@
     "\n",
     "        url_datos = r_json[\"datos\"]\n",
     "\n",
-    "        #Aquí manejar el error 500\n",
+    "        #Aqui manejar el error 500\n",
     "        try:\n",
     "            df = pd.read_json(url_datos, encoding=\"latin-1\")\n",
     "        except Exception as e:\n",
@@ -204,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "16cfee15",
    "metadata": {},
    "outputs": [
@@ -2179,13 +2177,12 @@
    ],
    "source": [
     "df_bilbao    = descargar_ciudad(\"Bilbao\", codigo_bilbao)\n",
-    "df_bilbao\n",
-    "\n"
+    "df_bilbao"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "1179537d",
    "metadata": {},
    "outputs": [
@@ -4160,13 +4157,12 @@
    ],
    "source": [
     "df_donostia  = descargar_ciudad(\"Donostia\", codigo_donostia)\n",
-    "df_donostia\n",
-    "\n"
+    "df_donostia"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "61f22e04",
    "metadata": {},
    "outputs": [
@@ -6141,12 +6137,12 @@
    ],
    "source": [
     "df_vitoria   = descargar_ciudad(\"Vitoria\", codigo_vitoria)\n",
-    "df_vitoria\n"
+    "df_vitoria"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "86fa5b31",
    "metadata": {},
    "outputs": [
@@ -8121,12 +8117,12 @@
    ],
    "source": [
     "df_valencia  = descargar_ciudad(\"Valencia\", codigo_valencia)\n",
-    "df_valencia\n"
+    "df_valencia"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "31059284",
    "metadata": {},
    "outputs": [
@@ -10101,12 +10097,12 @@
    ],
    "source": [
     "df_madrid    = descargar_ciudad(\"Madrid\", codigo_madrid)\n",
-    "df_madrid\n"
+    "df_madrid"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "7a936f9a",
    "metadata": {},
    "outputs": [
@@ -12081,7 +12077,7 @@
    ],
    "source": [
     "df_malaga    = descargar_ciudad(\"Málaga\", codigo_malaga)\n",
-    "df_malaga\n"
+    "df_malaga"
    ]
   },
   {
