--- a/Scripts/Scripts_BigDatayEcosistemaDigitalI/2.Limpieza_Meteorologia.ipynb
+++ b/Scripts/Scripts_BigDatayEcosistemaDigitalI/2.Limpieza_Meteorologia.ipynb
@@ -11213,7 +11213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "c43215a3",
    "metadata": {},
    "outputs": [
@@ -11227,7 +11227,7 @@
     }
    ],
    "source": [
-    "#1. Identificar columnas numéricas para imputación\n",
+    "#1. Identificar columnas numericas para imputación\n",
     "all_cols = meteorologia.columns.tolist()\n",
     "exclude = all_cols[:4] + [all_cols[-1]]\n",
     "numeric_cols = meteorologia.select_dtypes(include=[np.number]).columns.tolist()\n",
@@ -11243,7 +11243,7 @@
     "\n",
     "print(f\"Eliminados {registros_a_eliminar.sum()} registros con >50% missing\")\n",
     "\n",
-    "#3. Imputar variables meteorológicas\n",
+    "#3. Imputar variables meteorologicas\n",
     "for col in cols_to_impute:\n",
     "    if meteorologia[col].isna().any():\n",
     "        meteorologia[col] = meteorologia[col].fillna(\n",
@@ -11412,7 +11412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "f3cca714",
    "metadata": {},
    "outputs": [
@@ -11452,15 +11452,14 @@
     }
    ],
    "source": [
-    "# onvertir todas las columnas numéricas que estén como strings\n",
+    "# onvertir todas las columnas numéricas que esten como strings\n",
     "for col in meteorologia.columns:\n",
-    "    if meteorologia[col].dtype == 'object':  # Si es string\n",
+    "    if meteorologia[col].dtype == 'object': \n",
     "        # Reemplazar comas por puntos\n",
     "        meteorologia[col] = meteorologia[col].astype(str).str.replace(',', '.')\n",
-    "        # Intentar convertir a número\n",
     "        meteorologia[col] = pd.to_numeric(meteorologia[col], errors='ignore')\n",
     "\n",
-    "#Verificar tipos de datos después\n",
+    "#Verificar tipos de datos \n",
     "print(\"\\nTipos de datos después de la conversión:\")\n",
     "print(meteorologia.dtypes)\n",
     "\n",
