--- a/Scripts/Scripts_BigDatayEcosistemaDigitalI/3.Juntar_dfs.ipynb
+++ b/Scripts/Scripts_BigDatayEcosistemaDigitalI/3.Juntar_dfs.ipynb
@@ -53,7 +53,7 @@
     "reservas[\"checkout_time\"] = pd.to_datetime(reservas[\"checkout_time\"]).dt.date\n",
     "meteo[\"fecha\"] = pd.to_datetime(meteo[\"fecha\"]).dt.date\n",
     "\n",
-    "#Asegurarse de que las columnas meteorológicas sean numéricas\n",
+    "#Asegurarse de que las columnas meteorologicas sean numericas\n",
     "meteo['tmed'] = pd.to_numeric(meteo['tmed'], errors='coerce')\n",
     "meteo['prec'] = pd.to_numeric(meteo['prec'], errors='coerce')\n",
     "meteo['tmin'] = pd.to_numeric(meteo['tmin'], errors='coerce')\n",
@@ -68,7 +68,7 @@
     "meteo['hrMax'] = pd.to_numeric(meteo['hrMax'], errors='coerce')\n",
     "meteo['hrMin'] = pd.to_numeric(meteo['hrMin'], errors='coerce')\n",
     "\n",
-    "#Definir el diccionario de agregaciones\n",
+    "#Definir el diccionario \n",
     "agg_meteo = {\n",
     "    \"altitud\": \"first\",  \n",
     "    \"tmed\": \"mean\",\n",
@@ -86,17 +86,17 @@
     "    \"hrMin\": \"min\"\n",
     "}\n",
     "\n",
-    "#Resetear el índice de reservas\n",
+    "#Resetear el indice de reservas\n",
     "reservas = reservas.reset_index(drop=True)\n",
     "reservas[\"reserva_id\"] = reservas.index\n",
     "\n",
-    "#Calcular días de estancia\n",
+    "#Calcular dias de estancia\n",
     "dias_estancia = (\n",
     "    pd.to_datetime(reservas[\"checkout_time\"]) - \n",
     "    pd.to_datetime(reservas[\"checkin_time\"])\n",
     ").dt.days + 1\n",
     "\n",
-    "#Asegurarse de que los días de estancia no sean menores a 1\n",
+    "#Asegurarse de que los dias de estancia no sean menores a 1\n",
     "dias_estancia = dias_estancia.clip(lower=1)\n",
     "\n",
     "#Expansión de las reservas para cada día de estancia\n",
