--- a/Scripts/Scripts_Modelado_Clustering/1.Analisis_clusteres.ipynb
+++ b/Scripts/Scripts_Modelado_Clustering/1.Analisis_clusteres.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "dbee21b3",
    "metadata": {},
    "outputs": [],
@@ -43,34 +43,23 @@
     "    \"#1F3C4B\", \"#2C6E91\", \"#6B8E23\", \"#4F7C6B\",\n",
     "    \"#E6D5B8\", \"#D8CFC4\", \"#C97C5D\", \"#C9A24D\",\n",
     "    \"#4A4A4A\", \"#9E9E9E\", \"#F7F4EF\", \"#1C1C1C\",\n",
-    "    \"#8B3A3A\",  # rojo apagado\n",
-    "    \"#6F8F72\"   # verde oliva suave\n",
+    "    \"#8B3A3A\",  \n",
+    "    \"#6F8F72\"   \n",
     "]\n",
     "\n",
-    "# Tema base Seaborn (afecta también a matplotlib)\n",
     "sns.set_theme(\n",
     "    style=\"whitegrid\",\n",
     "    palette=palette_hospitality,\n",
     "    rc={\n",
-    "        # Tamaño de figuras\n",
     "        \"figure.figsize\": (10, 6),\n",
-    "\n",
-    "        # Títulos y labels\n",
     "        \"axes.titlesize\": 14,\n",
     "        \"axes.labelsize\": 12,\n",
-    "\n",
-    "        # Líneas\n",
     "        \"lines.linewidth\": 2,\n",
-    "\n",
-    "        # Grid\n",
     "        \"grid.alpha\": 0.3,\n",
-    "\n",
-    "        # Tipografía\n",
     "        \"font.size\": 11\n",
     "    }\n",
     ")\n",
     "\n",
-    "# Asegurar que matplotlib use exactamente la misma paleta\n",
     "plt.rcParams[\"axes.prop_cycle\"] = plt.cycler(color=palette_hospitality)"
    ]
   },
@@ -2536,7 +2525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "ee136237",
    "metadata": {},
    "outputs": [
@@ -2582,7 +2571,7 @@
     "primer_merge = metricas_booleanas.merge(metricas_numericas, on = 'clusters')\n",
     "segundo_merge = primer_merge.merge(metricas_categoricas,on='clusters')\n",
     "merge_metricas = segundo_merge.merge(pct_cancelar_por_cluster, on = 'clusters')\n",
-    "# display(merge_metricas)\n",
+    "\n",
     "merge_metricas = merge_metricas.rename(columns={\n",
     "    'ha_cancelado_x': 'cancelaciones_en_ese_cluster',\n",
     "    'ha_cancelado_y': 'pct_cancelaciones_respecto_todo_df'\n",
@@ -2665,7 +2654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "ce8c4e1f",
    "metadata": {},
    "outputs": [
@@ -2808,7 +2797,7 @@
     }
    ],
    "source": [
-    "# 1. Estacionalidad por clúster\n",
+    "# 1. Estacionalidad por cluster\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.countplot(data=df, x='estacion_estancia', hue='clusters', palette=palette_hospitality[:4])\n",
     "plt.title('Distribución por Estación de Estancia según Clúster')\n",
@@ -2817,7 +2806,7 @@
     "plt.legend(title='Clúster')\n",
     "plt.show()\n",
     "\n",
-    "# 2. Tipo de habitación por clúster\n",
+    "# 2. Tipo de habitacion por cluster\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.countplot(data=df, x='asset_type', hue='clusters', palette=palette_hospitality[:4])\n",
     "plt.title('Distribución de Tipo de Alojamiento por Clúster')\n",
@@ -2826,7 +2815,7 @@
     "plt.legend(title='Clúster')\n",
     "plt.show()\n",
     "\n",
-    "# Categoría solicitada por clúster\n",
+    "# Categoría solicitada por cluster\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.countplot(data=df, x='requested_category', hue='clusters', palette=palette_hospitality[:4])\n",
     "plt.title('Distribución de Categoría Solicitada por Clúster')\n",
@@ -2835,7 +2824,7 @@
     "plt.legend(title='Clúster')\n",
     "plt.show()\n",
     "\n",
-    "# 3. Ciudad por clúster\n",
+    "# 3. Ciudad por cluster\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.countplot(data=df, x='city', hue='clusters', palette=palette_hospitality[:4])\n",
     "plt.title('Distribución por Ciudad según Clúster')\n",
@@ -2855,7 +2844,7 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "# 5. Lead time por clúster (histograma)\n",
+    "# 5. Lead time por cluster (histograma)\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.histplot(data=df, x='lead_time', hue='clusters', multiple='stack', palette=palette_hospitality[:4], bins=30)\n",
     "plt.title('Distribución de Lead Time por Clúster')\n",
@@ -2894,7 +2883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "4829386a",
    "metadata": {},
    "outputs": [
@@ -2946,7 +2935,7 @@
     "x_mean = cluster_summary[\"valor_medio\"].mean()\n",
     "y_mean = cluster_summary[\"tasa_cancelacion\"].mean()\n",
     "\n",
-    "# Límites\n",
+    "# Limites\n",
     "x_min = cluster_summary[\"valor_medio\"].min() * 0.9\n",
     "x_max = cluster_summary[\"valor_medio\"].max() * 1.05\n",
     "y_min = cluster_summary[\"tasa_cancelacion\"].min() * 0.98\n",
@@ -2998,7 +2987,7 @@
     "        color=palette_hospitality[11]\n",
     "    )\n",
     "\n",
-    "# Líneas medias\n",
+    "# Lineas medias\n",
     "ax.axvline(x_mean, linestyle=\"--\", color=palette_hospitality[8], alpha=0.7)\n",
     "ax.axhline(y_mean, linestyle=\"--\", color=palette_hospitality[8], alpha=0.7)\n",
     "\n",
