--- a/Scripts/Scripts_Modelado_Clustering/3.modelado_ bien.ipynb
+++ b/Scripts/Scripts_Modelado_Clustering/3.modelado_ bien.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "22c8dafb",
    "metadata": {},
    "outputs": [],
@@ -102,34 +102,23 @@
     "    \"#1F3C4B\", \"#2C6E91\", \"#6B8E23\", \"#4F7C6B\",\n",
     "    \"#E6D5B8\", \"#D8CFC4\", \"#C97C5D\", \"#C9A24D\",\n",
     "    \"#4A4A4A\", \"#9E9E9E\", \"#F7F4EF\", \"#1C1C1C\",\n",
-    "    \"#8B3A3A\",  # rojo apagado\n",
-    "    \"#6F8F72\"   # verde oliva suave\n",
+    "    \"#8B3A3A\",  \n",
+    "    \"#6F8F72\"   \n",
     "]\n",
     "\n",
-    "# Tema base Seaborn (afecta también a matplotlib)\n",
     "sns.set_theme(\n",
     "    style=\"whitegrid\",\n",
     "    palette=palette_hospitality,\n",
     "    rc={\n",
-    "        # Tamaño de figuras\n",
     "        \"figure.figsize\": (10, 6),\n",
-    "\n",
-    "        # Títulos y labels\n",
     "        \"axes.titlesize\": 14,\n",
     "        \"axes.labelsize\": 12,\n",
-    "\n",
-    "        # Líneas\n",
     "        \"lines.linewidth\": 2,\n",
-    "\n",
-    "        # Grid\n",
     "        \"grid.alpha\": 0.3,\n",
-    "\n",
-    "        # Tipografía\n",
     "        \"font.size\": 11\n",
     "    }\n",
     ")\n",
     "\n",
-    "# Asegurar que matplotlib use exactamente la misma paleta\n",
     "plt.rcParams[\"axes.prop_cycle\"] = plt.cycler(color=palette_hospitality)\n"
    ]
   },
@@ -235,16 +224,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "9f2113eb",
    "metadata": {},
    "outputs": [],
    "source": [
     "cols_meteorologia = [\n",
     "    'tmed',    # temperatura media\n",
-    "    'tmin',    # mínima\n",
-    "    'tmax',    # máxima\n",
-    "    'prec',    # precipitación\n",
+    "    'tmin',    # minima\n",
+    "    'tmax',    # maxima\n",
+    "    'prec',    # precipitacion\n",
     "    'sol',     # horas de sol\n",
     "]\n"
    ]
@@ -259,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "13f3fe31",
    "metadata": {},
    "outputs": [
@@ -374,9 +363,9 @@
     "    )\n",
     ")\n",
     "resultado[[ 'tmed',    # temperatura media\n",
-    "    'tmin',    # mínima\n",
-    "    'tmax',    # máxima\n",
-    "    'prec',    # precipitación\n",
+    "    'tmin',    # minima\n",
+    "    'tmax',    # maxima\n",
+    "    'prec',    # precipitacion\n",
     "    'sol','checkin_time', 'city']] \n",
     "\n",
     "\n",
@@ -10809,7 +10798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "a8eb6529",
    "metadata": {},
    "outputs": [
@@ -10825,25 +10814,22 @@
     }
    ],
    "source": [
-    "# Preparar datos\n",
     "df = odds_ratio_df.copy()\n",
     "df[\"abs_coef\"] = df[\"coef_aprox\"].abs()\n",
     "\n",
     "df = df.sort_values(\"abs_coef\", ascending=False).head(20)\n",
     "df = df.sort_values(\"abs_coef\", ascending=True)\n",
     "\n",
-    "# Normalización del Odds Ratio para el color\n",
+    "# Normalizacion del Odds Ratio para el color\n",
     "norm = Normalize(\n",
     "    vmin=df[\"odds_ratio_aprox\"].min(),\n",
     "    vmax=df[\"odds_ratio_aprox\"].max()\n",
     ")\n",
     "cmap = plt.cm.RdYlGn_r\n",
     "colors = cmap(norm(df[\"odds_ratio_aprox\"]))\n",
-    "\n",
-    "# Crear figura y eje EXPLÍCITOS\n",
     "fig, ax = plt.subplots(figsize=(11, 7))\n",
     "\n",
-    "# Gráfico\n",
+    "# Grafico\n",
     "ax.barh(\n",
     "    df[\"feature\"],\n",
     "    df[\"coef_aprox\"],\n",
